--- a/src/au-table-pagination.html
+++ b/src/au-table-pagination.html
@@ -1,36 +1,36 @@
 <template>
-    <template replaceable part="pagination">
-        <nav hide.bind="hideSinglePage && totalPages === 1">
-            <ul class="pagination">
+  <template replaceable part="pagination">
+      <nav hide.bind="hideSinglePage && totalPages === 1">
+          <ul class="pagination">
 
-                <li class-name.bind="currentPage === 1 ? 'disabled' : ''" if.bind="boundaryLinks">
-                    <a aria-label="Previous" click.delegate="firstPage()">
-                        <span aria-hidden="true" innerhtml.bind="firstText"></span>
-                    </a>
-                </li>
+              <li class-name.bind="currentPage === 1 ? 'page-item disabled' : 'page-item'" if.bind="boundaryLinks">
+                  <a class="page-link" aria-label="Previous" click.delegate="firstPage()">
+                      <span aria-hidden="true" innerhtml.bind="firstText"></span>
+                  </a>
+              </li>
 
-                <li class-name.bind="currentPage === 1 ? 'disabled' : ''" if.bind="directionLinks">
-                    <a aria-label="Previous" click.delegate="previousPage()">
-                        <span aria-hidden="true" innerhtml.bind="previousText"></span>
-                    </a>
-                </li>
+              <li class-name.bind="currentPage === 1 ? 'page-item disabled' : ''" if.bind="directionLinks">
+                  <a class="page-link" aria-label="Previous" click.delegate="previousPage()">
+                      <span aria-hidden="true" innerhtml.bind="previousText"></span>
+                  </a>
+              </li>
 
-                <li repeat.for="page of displayPages" class-name.bind="currentPage === page.value ? 'active' : ''">
-                    <a click.delegate="selectPage(page.value)">${page.title}</a>
-                </li>
+              <li repeat.for="page of displayPages" class-name.bind="currentPage === page.value ? 'page-item active' : 'page-item'">
+                  <a class="page-link" click.delegate="selectPage(page.value)">${page.title}</a>
+              </li>
 
-                <li class-name.bind="currentPage === totalPages ? 'disabled' : ''" if.bind="directionLinks">
-                    <a aria-label="Next" click.delegate="nextPage()">
-                        <span aria-hidden="true" innerhtml.bind="nextText"></span>
-                    </a>
-                </li>
+              <li class-name.bind="currentPage === totalPages ? 'page-item disabled' : 'page-item'" if.bind="directionLinks">
+                  <a class="page-link" aria-label="Next" click.delegate="nextPage()">
+                      <span aria-hidden="true" innerhtml.bind="nextText"></span>
+                  </a>
+              </li>
 
-                <li class-name.bind="currentPage === totalPages ? 'disabled' : ''" if.bind="boundaryLinks">
-                    <a aria-label="Previous" click.delegate="lastPage()">
-                        <span aria-hidden="true" innerhtml.bind="lastText"></span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </template>
+              <li class-name.bind="currentPage === totalPages ? 'page-item disabled' : 'page-item'" if.bind="boundaryLinks">
+                  <a class="page-link" aria-label="Previous" click.delegate="lastPage()">
+                      <span aria-hidden="true" innerhtml.bind="lastText"></span>
+                  </a>
+              </li>
+          </ul>
+      </nav>
+  </template>
 </template>
